--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,22 +1,34 @@
 <div class="login-wrapper">
-<div class="background-balls">
-  <div class="ball ball1"></div>
-  <div class="ball ball2"></div>
-  <div class="ball ball3"></div>
-</div>
+  <div class="background-balls">
+    <div class="ball ball1"></div>
+    <div class="ball ball2"></div>
+    <div class="ball ball3"></div>
+  </div>
 
   <div class="login-container">
-    <h2 class="title">Sign in </h2>
+    <h2 class="title">Sign in</h2>
 
     <form (ngSubmit)="onLoginClick()">
       <div class="form-group">
         <label>Email</label>
-        <input type="text"[(ngModel)]="email"name="email"placeholder="Enter Your Email"required/>
+        <input 
+          type="text"
+          [(ngModel)]="email"
+          name="email"
+          placeholder="Enter Your Email"
+          required
+        />
       </div>
 
       <div class="form-group position-relative">
-        <label>MPIN</label>
-        <input [type]="showPassword ? 'text' : 'password'"[(ngModel)]="mpin"name="password"placeholder="Enter Your MPIN"required/>
+        <label>MPIN / Password</label>
+        <input 
+          [type]="showPassword ? 'text' : 'password'"
+          [(ngModel)]="password"
+          name="password"
+          placeholder="Enter Your MPIN or Password"
+          required
+        />
         <span class="toggle" (click)="togglePassword()">
           {{ showPassword ? 'HIDE' : 'SHOW' }}
         </span>
@@ -27,8 +39,7 @@
       </div>
 
       <button type="submit" class="btn">Login</button>
-
-     <button type="button" class="btn" (click)="OnRegisterClick()">REGISTER</button>
+      <button type="button" class="btn" (click)="OnRegisterClick()">REGISTER</button>
     </form>
   </div>
 </div>
