--- a/src/app/admin/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/admin/admin-dashboard/admin-dashboard.component.html
@@ -7,15 +7,15 @@
     </div>
     <ul class="nav-items">
       <li routerLink="/admin/admin-home" routerLinkActive="active">Home</li>
-      <li routerLink="/admin/invoices" routerLinkActive="active">Invoices</li>
-      <li routerLink="/admin/messages" routerLinkActive="active">Messages</li>
+      <li routerLink="/admin/admin-schemes" routerLinkActive="active">Schemes</li>
       <li routerLink="/admin/activity" routerLinkActive="active">Activity</li>
       <li routerLink="/admin/customers" routerLinkActive="active">Customers</li>
       <li routerLink="/admin/employees" routerLinkActive="active">Employees</li>
+      <li routerLink="/admin/verification" routerLinkActive="active">Verification</li>
     </ul>
     <ul class="bottom-links">
-      <li [class.active]="selected === 'help'" (click)="select('help')">Get Help</li>
-      <li [class.active]="selected === 'settings'" (click)="select('settings')">Settings</li>
+      <li routerLink="/admin/support" routerLinkActive="active">Support</li>
+      <li routerLink="/admin/admin-settings" routerLinkActive="active">Settings</li>
       <li class="logout" (click)="logout()">Logout</li>
     </ul>
   </div>
