--- a/src/app/admin/admin-home/admin-home.component.html
+++ b/src/app/admin/admin-home/admin-home.component.html
@@ -1,1 +1,11 @@
-<p>admin-home works!</p>
+
+<video
+  autoplay
+  muted
+  loop
+  playsinline
+  class="dashboard-video"
+>
+  <source src="assets/deposit.mp4" type="video/mp4" />
+  Your browser does not support the video tag.
+</video>
