--- a/src/app/user/user-settings/user-settings.component.html
+++ b/src/app/user/user-settings/user-settings.component.html
@@ -19,20 +19,18 @@
     </div>
   </div>
 
-  <!-- Tab content -->
   <div class="tab-content">
 
     <div *ngIf="activeTab === 'personal'">
       <h3>Personal Info</h3>
       <p><strong>Name:</strong> David <span class="edit-link">Edit</span></p>
-      <p><strong>Country:</strong> 🇮🇹 Italy <span class="edit-link">Edit</span></p>
+      <p><strong>Country:</strong>  Italy <span class="edit-link">Edit</span></p>
       <p><strong>Timezone:</strong> Europe/Rome <span class="edit-link">Edit</span></p>
-      <p><strong>About:</strong> Hey, it's me :) <span class="edit-link">Edit</span></p>
+      <p><strong>About:</strong> Hey, it's me  <span class="edit-link">Edit</span></p>
     </div>
 
     <div *ngIf="activeTab === 'security'">
       <h3>Login & Security</h3>
-      <!-- MPIN/Password update form -->
     </div>
   </div>
 </div>
